force-app/main/default/objects/AcctSeed__Billing_Line__c/fields/Billing_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Number__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; +  AcctSeed__Billing__c ,  AcctSeed__Billing__r.Invoice_Number__c , &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing</label>
    <type>Text</type>
</CustomField>