force-app/main/default/objects/AcctSeed__Billing_Line__c/fields/Is_Des_Update__c.field-meta.xml
<CustomField>
    <fullName>Is_Des_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Des Update</label>
    <type>Checkbox</type>
</CustomField>