force-app/main/default/objects/AcctSeed__Billing_Line__c/fields/MWG_Project__c.field-meta.xml
<CustomField>
    <fullName>MWG_Project__c</fullName>
    <formula>AcctSeed__Billing__r.AcctSeed__Opportunity__r.Project__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MWG Project</label>
    <type>Text</type>
</CustomField>