force-app/main/default/objects/AcctSeed__Billing_Line__c/fields/Non_Taxable_Line__c.field-meta.xml
<CustomField>
    <fullName>Non_Taxable_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this if this Product is non-taxable for this sale</inlineHelpText>
    <label>Non-Taxable Line</label>
    <type>Checkbox</type>
</CustomField>