force-app/main/default/objects/AcctSeed__Billing_Line__c/fields/Ordered__c.field-meta.xml
<CustomField>
    <fullName>Ordered__c</fullName>
    <formula>AcctSeedERP__Sales_Order_Line__r.AcctSeedERP__Quantity_Ordered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ordered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>