force-app/main/default/objects/AcctSeed__Billing_Line__c/fields/QuoteId__c.field-meta.xml
<CustomField>
    <fullName>QuoteId__c</fullName>
    <formula>AcctSeedERP__Sales_Order_Line__r.Quote_Line_Item__r.Quote__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuoteId</label>
    <type>Text</type>
</CustomField>