force-app/main/default/objects/AcctSeed__Billing_Line__c/fields/SPX_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>SPX_Order_Number__c</fullName>
    <formula>AcctSeedERP__Sales_Order_Line__r.SPX_Order_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPX Order Number</label>
    <type>Text</type>
</CustomField>